<resources>
    <string name="app_name">Student Help</string>
    <string name="title_home">Home</string>
    <string name="title_notice">Notice</string>
    <string name="title_me">Me</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_certificate">Certificate</string>
    <string name="button_publish">Publish</string>
    <string name="button_detail">Detail</string>
    <string name="button_conversation">Conversation</string>
    <string name="button_announcement">Announcement</string>
    <string name="button_zone">Zone</string>
    <string name="button_account">Account</string>
    <string name="button_wallet">Wallet</string>
    <string name="button_history">History</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>
    <string name="button_recharge">Recharge</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_certificate">Certificate</string>
    <string name="title_publish">Publish</string>
    <string name="title_detail">Detail</string>
    <string name="title_conversation">Conversation</string>
    <string name="title_announcement">Announcement</string>
    <string name="title_zone">Zone</string>
    <string name="title_account">Account</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_errand">Errand</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_realName">Real name</string>
    <string name="hint_studentId">Student ID</string>
    <string name="checkBox_certificate">Certificate</string>
    <string name="hint_search">Search</string>
    <string name="state_waiting">Waiting</string>
    <string name="state_ongoing">Ongoing</string>
    <string name="state_complete">Complete</string>
    <string name="state_deleted">Deleted</string>
    <string name="state_all">All</string>
    <string name="type_all">All</string>
    <string name="type_deal">Deal</string>
    <string name="type_group">Group</string>
    <string name="button_withdrawal">Withdrawal</string>
    <string name="title_myCoin">My Coin</string>
    <string name="tabItem_conversation">Conversation</string>
    <string name="tabItem_progress">Progress</string>
    <string name="tabItem_announcement">Announcement</string>
    <string name="button_cancel">Cancel</string>
    <string name="editText_title">Title</string>
    <string name="radioButton_deal">Deal</string>
    <string name="radioButton_group">Group</string>
    <string name="text_version">Version</string>
    <string name="button_evaluate">Evaluate</string>
    <string name="button_delete">Delete</string>
    <string name="button_apply">Apply</string>
    <string name="button_dismiss">dismiss</string>
    <string name="button_resign">Resign</string>
    <string name="button_submit">Submit</string>
    <string name="text_changeSkin">Change Skin</string>
    <string name="toast_loginError">Login failed!</string>
    <string name="text_username">Username</string>
    <string name="text_college">College</string>
    <string name="text_Nickname">Nickname</string>
    <string name="text_autograph">Autograph</string>
    <string name="buttton_accountSave">Account Save</string>
    <string name="text_photo">Account Photo</string>
    <string name="toast_loginError_notExist">No such user!</string>
    <string name="toast_loginError_wrongPassword">Wrong password!</string>
    <string name="toast_networkError">Network error!</string>
    <string name="toast_registerError_existUser">Conflicts with existing username!</string>
    <string name="toast_registerError">Register failed!</string>
    <string name="toast_searchError">Search failed!</string>
    <string name="toast_publishError_moneyInsufficient">Money insufficient!</string>
    <string name="toast_publishError_uploadError">Upload failed!</string>
    <string name="toast_publishError_createError">Creation failed!</string>
    <string name="toast_publishError">Publish failed!</string>
    <string name="button_accept">Accept</string>
    <string name="button_reject">Reject</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_refuse">Refuse</string>
    <string name="textView_tag">Tag</string>
    <string name="textView_state">State</string>
    <string name="string_applicationContent">This one is applying for this errand</string>
    <string name="string_submissionContent">This one has submitted, please take action</string>
    <string name="string_judgeContent">Judge or not?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="string_judge">Judge</string>
    <string name="string_resultCancelContent">Judge says this deal should be canceled</string>
    <string name="string_resultKeepContent">Judge says this deal should go on</string>
    <string name="button_comment">Comment</string>
    <string name="toast_conversationListError">get conversationList failed!</string>
    <string name="title_complain">Complain</string>
    <string name="button_agree">Agree</string>
    <string name="button_disagree">Disagree</string>
    <string name="button_send">Send</string>
    <string name="toast_complainError">Complain failed!</string>
    <string name="hint_newComment">Please input comment</string>
    <string name="toast_recharge_success">Recharge Success!</string>
    <string name="toast_recharge_failed">Recharge Failed!</string>
    <string name="toast_withdraw_success">Withdraw Success!</string>
    <string name="toast_withdraw_failed">Withdraw Failed!</string>
    <string name="toast_withdraw_money">Money Not Enough!</string>
    <string name="string_judge_waitingForOpponent">Please wait for you opponent to finish</string>
    <string name="string_judge_waitingForJudge">Please wait for judge</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>