<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.NoticeFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/TabStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_conversation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem_conversation" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem_progress" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_announcement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem_announcement" />
    </com.google.android.material.tabs.TabLayout>

    <fragment
        android:id="@+id/navHostFragment_notice"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:navGraph="@navigation/navgraph_notice" />

</androidx.constraintlayout.widget.ConstraintLayout>